# rust-systems-lab

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/01-log-analyzer/: Cargo.toml  README.md
crates/01-log-analyzer/src/: main.rs
crates/01-log-analyzer/tests/: integration_tests.rs
crates/02-mini-http/: Cargo.toml  README.md
crates/02-mini-http/src/: main.rs
crates/02-mini-http/tests/: integration_tests.rs
crates/03-async-scraper/: Cargo.toml  README.md
crates/03-async-scraper/src/: main.rs
crates/03-async-scraper/tests/: integration_tests.rs
crates/04-kv-store/: Cargo.toml  README.md
crates/04-kv-store/src/: main.rs
crates/05-task-queue/: Cargo.toml  README.md
crates/05-task-queue/src/: main.rs
crates/06-query-engine/: Cargo.toml  README.md
crates/06-query-engine/src/: main.rs
crates/07-bittorrent-client/: Cargo.toml  README.md
crates/07-bittorrent-client/src/: main.rs  tests.rs
