[package]
name = "kv-store"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "3.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.6", features = ["derive"] }
