[package]
name = "task-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.23"
